--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="mx-auto max-w-2xl py-3 sm:py-48 lg:py-24">
                     <div class="text-center">
                         <h1 class="text-2x1 font-bold tracking-tight text-gray-900 sm:text-6xl">Discover Your Perfect Brew</h1>
-                        <p class="mt-6 text-lg leading-8 text-gray-600">Explore our curated selection of premium coffee beans, freshly roasted and delivered to your door.</p>
+                        <p class="mt-6 text-lg leading-8 text-gray-600" id="phraseContainer"></p>
                         <div class="mt-10 flex items-center justify-center gap-x-6">
                             <a href="./src/pages/store.html" class="rounded-md bg-light-brown px-3.5 py-2.5 text-sm font-semibold text-black shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Browse</a>
                             <a href="./src/pages/about.html" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
@@ -187,5 +187,6 @@
             </div>
         </footer>
         <script src="../js/nav.js"></script>
+        <script src="./src/js/quotes.js"></script>
     </body>
 </html>
