--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </header>
-        <main class="mainDisplay">
+        <main>
             <div class="bg-white">
             </div>
                 <div class="mx-auto max-w-2xl py-3 sm:py-48 lg:py-24">
