--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 };
             </script>
     </head>
-    <body>
+    <body class="flex min-h-screen flex-col">
         <header class="bg-light-brown z-50  ">
             <nav
                 class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8 z-50"
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </header>
-        <main>
+        <main class="flex-1">
             <div class="bg-white">
             </div>
                 <div class="mx-auto max-w-2xl py-3 sm:py-48 lg:py-24">
