--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -33,7 +33,7 @@
                 };
             </script>
     </head>
-    <body>
+    <body class="flex min-h-screen flex-col">
         <header class="bg-light-brown">
             <nav
                 class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8"
@@ -139,7 +139,7 @@
                 </div>
             </div>
         </header>
-        <main class="mainDisplay">
+        <main class="flex-1">
             <img
                 src="../assets/images/coffeebeans.jpg"
                 alt=""
