--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -24,7 +24,7 @@
                     },
                 };
             </script>
-    <body>
+    <body class="flex min-h-screen flex-col">
         <header class="bg-light-brown">
             <nav
                 class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8"
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </header>
-        <main class="mainDisplay">
+        <main class="flex-1">
             <div class="isolate bg-white px-6 py-8 sm:py-8 lg:px-8">
                 <div
                     class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]"
