--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -18,6 +18,7 @@
         </style>
                 <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');</style>
             <script>
                 tailwind.config = {
@@ -188,6 +189,7 @@
                                 <button
                                     type="submit"
                                     class="bg-indigo-600 border-transparent hover:bg-indigo-700 focus:ring-offset-gray-50 focus:ring-indigo-500 text-black w-full rounded-md border px-4 py-3 text-base font-medium shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2"
+                                    id="checkoutButton"
                                 >
                                     Checkout
                                 </button>
@@ -261,5 +263,6 @@
         <script src="../js/nav.js"></script>
         <script src="../js/cart&store.js"></script>
         <script src="../js/objects.js"></script>
+        <script src="../js/sweet.js"></script>
     </body>
 </html>
