--- a/src/pages/store.html
+++ b/src/pages/store.html
@@ -8,14 +8,15 @@
     <link rel="icon" href="../assets/icons/coffee-cup.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');</style></head>
-            <script src="https://cdn.tailwindcss.com"></script>
-        <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
-        <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');</style>
-            <script>
-                tailwind.config = {
-                    theme: {
-                        colors: {
-                            'light-green': '#606C38',
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');</style>
+    <script>
+        tailwind.config = {
+            theme: {
+                colors: {
+                    'light-green': '#606C38',
                             'dark-green': '#283618',
                             'light-brown': '#DDA15E',
                             'dark-brown': '#BC6C25',
@@ -23,7 +24,7 @@
                         },
                     },
                 };
-            </script>
+                </script>
     <body class="flex flex-col min-h-screen">
         <header class="bg-light-brown">
             <nav
@@ -294,5 +295,6 @@
         <script src="../js/nav.js"></script>
         <script src="../js/objects.js"></script>
         <script src="../js/cart&store.js"></script>
+        <script src="../js/sweet.js"></script>
     </body>
 </html>
